<resources>
    <string name="app_name">Simple Notes</string>
    <string name="note_title">Tiêu đề</string>
    <string name="nightmode">nightmode</string>
    <string name="sign_up_here">SIGN UP HERE!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="note">note</string>
    <string name="date">date</string>
    <string name="settings">settings</string>
    <string name="addnewnote">addnewnote</string>
    <string name="hello_sunday">Xin chào ngày chủ nhật vui vẻ</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="welcome_to_note_app">WELCOME TO NOTE APP</string>
    <string name="log_in">Start to LOG IN!</string>
    <string name="login">Log in</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="signup">Sign up</string>
    <string name="reset_password"> Reset</string>
    <string name="dmy">Ngày tháng năm</string>
    <string name="sokytu">Số ký tự</string>
    <string name="type_here">Nhập ở đây</string>
    <string name="back">back</string>
    <string name="info">info</string>
    <string name="share">share</string>
    <string name="thongke">Thống kê</string>
    <string name="dongbo">Đồng bộ</string>
    <string name="phongchu">Phông chữ và Cỡ chữ</string>
    <string name="quanlytaikhoan">Quản lý tài khoản</string>
    <string name="thongtinphienban">Thông tin phiên bản</string>
    <string name="thongtinnguoidung">THÔNG TIN NGƯỜI DÙNG</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="send_Email_Verification">Verification Email is Sent, Verify and Log In Again</string>
    <string name="fail_to_send_email_verify">Failed to Send Verification Email</string>
    <string name="verify_email_title1">Start to reset Password</string>
    <string name="verify_email_title2">Verify Email First!</string>
</resources>