<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".log_in">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/backgroundlg"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/welcome_to_note_app"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/darkpink"
                android:textSize="25sp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:background="@color/backgroundlogin"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:background="@color/backgroundlogin"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/backgroundlogin"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textColor="@color/darkpink"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

            <LinearLayout
                android:layout_width="352dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/don_t_you_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/signup"
                    android:textColor="@color/black2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_forgotpasswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/reset_password"
                    android:textColor="@color/black2"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
