<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screenbackground"
    tools:context=".setting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/darkpink"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/iBt_mode"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="13dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/nightmode"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iBtFindNote"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark" />

    <ImageButton
        android:id="@+id/iBtFindNote"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/note"
        android:onClick="btnBacktoMain_day"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/iBt_mode"
        app:layout_constraintRight_toLeftOf="@id/iBt_settime"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_note" />

    <ImageButton
        android:onClick="reminder"
        android:id="@+id/iBt_settime"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/date"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/iBtFindNote"
        app:layout_constraintRight_toLeftOf="@id/iBt_setting"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_clock" />

    <ImageButton
        android:id="@+id/iBt_setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="1dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/settings"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/iBt_settime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_setting"
        android:onClick = "setting"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/thongke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/darkpink"
                android:text="@string/thongke"
                style="@style/TextStyle_White_day"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:layout_weight="1"
                android:layout_marginTop="70dp"
                android:onClick="statistic"
                />

            <Button
                android:id="@+id/font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/darkpink"
                android:text="@string/phongchu"
                style="@style/TextStyle_White_day"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="font_day"
                app:layout_constraintTop_toBottomOf="@id/thongke"
                android:layout_weight="1"
                android:layout_marginVertical="70dp"
                />

            <Button
                android:id="@+id/license_app"
                style="@style/TextStyle_White_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darkpink"
                android:onClick="license_day"
                android:text="Thông tin phiên bản"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/font" />

            <Button
                android:id="@+id/manage_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/darkpink"
                android:onClick="login_day"
                android:text="@string/quanlytaikhoan"
                style="@style/TextStyle_White_day"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/license_app"
                android:layout_weight="1"
                android:layout_marginVertical="70dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>