<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".registerpage">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/backgroundlg"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:padding="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkyellow"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_here"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundlogin"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:background="@color/backgroundlogin"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_passwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@color/backgroundlogin"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/backgroundlogin"
                android:textColor="@color/darkyellow"
                android:text="Sign Up"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Log In"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>