<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_manager"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/darkpink"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/iBt_mode"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="13dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/nightmode"
        android:onClick="night_user"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iBtFindNote"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark" />

    <ImageButton
        android:id="@+id/iBtFindNote"
        android:onClick="day_main"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/note"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/iBt_mode"
        app:layout_constraintRight_toLeftOf="@id/iBt_settime"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_note" />

    <ImageButton
        android:id="@+id/iBt_settime"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@color/darkpink"
        android:contentDescription="@string/date"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/iBtFindNote"
        app:layout_constraintRight_toLeftOf="@id/iBt_setting"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_clock"
        android:onClick="reminder"/>

    <ImageButton
        android:id="@+id/iBt_setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="1dp"
        android:onClick="setting_day"
        android:background="@color/darkpink"
        android:contentDescription="@string/settings"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/iBt_settime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_setting" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/changepasw">
        <LinearLayout
            android:id="@+id/user_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/lineartextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/linear"
                android:layout_weight="1"
                android:layout_marginTop="50dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thongtinnguoidung"
                    android:textColor="@color/darkpink"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/lineartextView"
                android:weightSum="10"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="5">
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/darkpink"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/email"
                        android:textColor="@color/darkpink"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5">
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textSize="20sp"
                        android:layout_marginStart="5dp"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="30dp"
                        android:hint="@string/email"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/username" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/changepasw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đổi mật khẩu"
        android:backgroundTint="@color/darkpink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        android:layout_marginTop="30dp"
        android:onClick="changepass" />
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkpink"
        android:text="Đăng xuất"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:onClick="logout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>